Move logging test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,7 +5,7 @@ FLAGS=-q
 TESTS=$(sort $(wildcard */*.cht */*.tst))
 TESTS_CHTTP=$(sort $(wildcard 001_http/*.cht 002_http_live/*.cht))
 TESTS_JSON=$(sort $(wildcard 003_json/*.tst))
-TESTS_CORE=$(sort $(wildcard 004_core/*.tst 006_store/*.tst))
+TESTS_CORE=$(sort $(wildcard 004_core/*.tst 006_store/*.tst 007_other/*.tst))
 TESTS_COREX=$(sort $(wildcard 004_core/*.tstx))
 TESTS_ERROR=$(sort $(wildcard */*.tstf))
 PRE_EXEC=
