--- a/src/Makefile
+++ b/src/Makefile
@@ -24,12 +24,15 @@ FJSON_CLIENT_OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(FJSON_CLIENT)))
 FJSON_SRC:=$(wildcard fjson/*.c)
 FJSON_OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(FJSON_SRC)))
 
+FCACHE_SRC:=$(wildcard cache/*.c)
+FCACHE_OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(FCACHE_SRC)))
+
 UTILS_SRC=$(wildcard utils/*.c compress/*.c)
 UTILS_OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(UTILS_SRC)))
 
 ALL_SOURCE:=$(shell find * -type f -name '*.c')
-SOURCE:=$(filter-out $(TEST_SRC) $(CHTTP_CLIENT) $(CHTTP_SRC) $(FJSON_CLIENT) $(FJSON_SRC), \
-	$(ALL_SOURCE))
+SOURCE:=$(filter-out $(TEST_SRC) $(CHTTP_CLIENT) $(CHTTP_SRC) $(FJSON_CLIENT) $(FJSON_SRC) \
+	$(FCACHE_SRC), $(ALL_SOURCE))
 OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(SOURCE)))
 DEPS:=$(patsubst %,$(BUILD)/%.d,$(basename $(ALL_SOURCE)))
 BUILD_DIRS=$(sort $(dir $(DEPS)))
@@ -101,7 +104,7 @@ ifeq ($(LIBUNWIND),true)
 endif
 
 # Release build (RELEASE=true)
-RELEASE_CFLAGS=-DFBR_NO_ASSERT_DEV
+RELEASE_CFLAGS=-DFBR_NO_ASSERT_DEV -DFBR_RELEASE
 ifeq ($(RELEASE),true)
 	CFLAGS_BUILD+=$(RELEASE_CFLAGS)
 endif
@@ -133,7 +136,7 @@ AFL_CFLAGS_CC=$(CFLAGS_CLANG)
 .PHONY:		all lib clean gcov gcovclean afl
 
 all:		chttp_client fjson_client fiberfs_test lib
-lib:		libfiberfs.so libchttp.a libfjson.a
+lib:		libfiberfs.so libchttp.a libfjson.a libfcache.a
 
 chttp_client:	libchttp.a $(CHTTP_CLIENT_OBJS)
 		$(CC) -o $@ $(CHTTP_CLIENT_OBJS) libchttp.a $(LIBFLAGS)
@@ -141,17 +144,20 @@ chttp_client:	libchttp.a $(CHTTP_CLIENT_OBJS)
 fjson_client:	libfjson.a $(FJSON_CLIENT_OBJS)
 		$(CC) -o $@ $(FJSON_CLIENT_OBJS) libfjson.a $(LIBFLAGS)
 
-fiberfs_test:	libchttp.a libfjson.a $(TEST_OBJS) $(OBJS)
-		$(CC) -o $@ $(TEST_OBJS) $(OBJS) libchttp.a libfjson.a $(LIBFLAGS)
+fiberfs_test:	libchttp.a libfjson.a libfcache.a $(TEST_OBJS) $(OBJS)
+		$(CC) -o $@ $(TEST_OBJS) $(OBJS) libchttp.a libfjson.a libfcache.a $(LIBFLAGS)
 
-libfiberfs.so:	$(OBJS) libchttp.a libfjson.a
-		$(CC) $(LDFLAGS) -o $@ $(OBJS) libchttp.a libfjson.a
+libfiberfs.so:	$(OBJS) libchttp.a libfjson.a libfcache.a
+		$(CC) $(LDFLAGS) -o $@ $(OBJS) libchttp.a libfjson.a libfcache.a
 
 libchttp.a:	$(CHTTP_OBJS) $(UTILS_OBJS)
 		ar cr $@ $(CHTTP_OBJS) $(UTILS_OBJS)
 
 libfjson.a:	$(FJSON_OBJS) $(UTILS_OBJS)
 		ar cr $@ $(FJSON_OBJS) $(UTILS_OBJS)
+
+libfcache.a:	$(FCACHE_OBJS) $(UTILS_OBJS)
+		ar cr $@ $(FCACHE_OBJS) $(UTILS_OBJS)
 
 $(BUILD)/%.o:	%.c | $(BUILD_DIRS)
 		$(CC) $(CFLAGS) $(CFLAGS_CC) $(CFLAGS_BUILD) $(DEPFLAGS) -c $< -o $@
