--- a/src/Makefile
+++ b/src/Makefile
@@ -24,7 +24,7 @@ FJSON_CLIENT_OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(FJSON_CLIENT)))
 FJSON_SRC:=$(wildcard fjson/*.c)
 FJSON_OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(FJSON_SRC)))
 
-FCACHE_SRC:=$(wildcard cache/*.c)
+FCACHE_SRC:=$(wildcard fcache/*.c)
 FCACHE_OBJS:=$(patsubst %,$(BUILD)/%.o,$(basename $(FCACHE_SRC)))
 
 UTILS_SRC=$(wildcard utils/*.c compress/*.c)
