Cleanup Makefile spacing

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 # FiberFS Makefile (tests)
 
-FIBERFS_TEST=../src/fiberfs_test
+FIBER_TEST=../src/fiberfs_test
 FLAGS=-q
 TESTS=$(sort $(wildcard */*.cht */*.tst))
 TESTS_CHTTP=$(sort $(wildcard 001_http/*.cht 002_http_live/*.cht))
@@ -19,54 +19,54 @@ GDB=gdb --args
 export FIBER_VALGRIND=$(PRE_EXEC)
 export FIBER_FLAGS=$(FLAGS)
 
-FIBERFS_TEST_RULE=$(FIBERFS_TEST)
+FIBER_TEST_RULE=$(FIBER_TEST)
 FAST_VAR=FAST
 ifdef $(FAST_VAR)
-	FIBERFS_TEST_RULE=
+	FIBER_TEST_RULE=
 endif
 
 .PHONY: all test check FORCE valgrind verbose sudo json core corex error chttp
 
-all:			check
+all:		check
 
-test:			check
+test:		check
 
 FORCE:
 
-$(FIBERFS_TEST):	FORCE
-			$(MAKE) -C .. fiberfs_test CC_REUSE=true
+$(FIBER_TEST):	FORCE
+		$(MAKE) -C .. fiberfs_test CC_REUSE=true
 
 valgrind:
-			$(eval PRE_EXEC=$(VALGRIND))
-			@echo valgrind: enabled
+		$(eval PRE_EXEC=$(VALGRIND))
+		@echo valgrind: enabled
 
 verbose:
-			$(eval FLAGS=-vv)
-			$(eval FAIL_OUT=)
-			@echo verbose: enabled
+		$(eval FLAGS=-vv)
+		$(eval FAIL_OUT=)
+		@echo verbose: enabled
 
 sudo:
-			sudo true
+		sudo true
 
-check:			$(TESTS)
+check:		$(TESTS)
 
-chttp:			$(TESTS_CHTTP)
+chttp:		$(TESTS_CHTTP)
 
-json:			$(TESTS_JSON)
+json:		$(TESTS_JSON)
 
-core:			$(TESTS_CORE)
+core:		$(TESTS_CORE)
 
-corex:			$(TESTS_COREX)
+corex:		$(TESTS_COREX)
 
-cstore:			$(TESTS_CSTORE)
+cstore:		$(TESTS_CSTORE)
 
-error:			$(TESTS_ERROR)
+error:		$(TESTS_ERROR)
 
-%.cht %.tst:		$(FIBERFS_TEST_RULE) FORCE
-			$(PRE_EXEC) $(FIBERFS_TEST) $(FLAGS) $@
+%.cht %.tst:	$(FIBER_TEST_RULE) FORCE
+		$(PRE_EXEC) $(FIBER_TEST) $(FLAGS) $@
 
-%tstx:			$(FIBERFS_TEST_RULE) FORCE | sudo
-			$(PRE_EXEC) $(FIBERFS_TEST) $(FLAGS) $@
+%tstx:		$(FIBER_TEST_RULE) FORCE | sudo
+		$(PRE_EXEC) $(FIBER_TEST) $(FLAGS) $@
 
-%.tstf:			$(FIBERFS_TEST_RULE) FORCE
-			$(FAIL_CMD) '$(FIBERFS_TEST) $(FLAGS) $@ $(FAIL_OUT) || echo SUCCESS'
+%.tstf:		$(FIBER_TEST_RULE) FORCE
+		$(FAIL_CMD) '$(FIBER_TEST) $(FLAGS) $@ $(FAIL_OUT) || echo SUCCESS'
